--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+html, body, #root {
+    height: 100%;
+    overflow: scroll;
 }
