--- a/client/src/pages/LandingPage/LandingPage.css
+++ b/client/src/pages/LandingPage/LandingPage.css
@@ -1,63 +1,68 @@
-.wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    max-width: 750px;
-    min-height: 400px;
+.landing {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  max-width: 750px;
+  min-height: 400px;
 }
 
-.main__wrapper {
-    margin-top: 66px;
+.container_main__landing {
+  position: relative;
+  right: 40px;
+  margin-top: 66px;
 }
 
-.info {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    left: 55px;
+.site-info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
-.info__title {
-    font-size: 37px;
-    font-family: 'Roboto', serif;
-    font-weight: 500;
+.landing__site-info {
+  position: relative;
+  left: 55px;
 }
 
-.info__site-description {
-    font-size: 14px;
-    font-family: 'Roboto', serif;
-    font-weight: 400;
-    color: #828282;
-    padding: 6px 12px;
-    border-left: 1px solid #333333;
-    margin: 33px 0;
+.site-info__title {
+  font-size: 37px;
+  font-family: Roboto;
+  font-weight: 500;
 }
 
-.interact {
-    display: flex;
-    flex-direction: row;
+.site-info__description {
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 400;
+  color: #828282;
+  padding: 6px 12px;
+  border-left: 1px solid #333333;
+  margin: 33px 0;
 }
 
-.more {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-family: 'Roboto', serif;
-    font-size: 14px;
-    color: #A8171A;
+.landing-interact {
+  display: flex;
+  flex-direction: row;
 }
 
-.interact__more {
-    margin-left: 27px;
+.more-about-site {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: Roboto;
+  font-size: 14px;
+  color: #a8171a;
 }
 
-.more__arrow {
-    margin-right: 5px;
+.landing-interact__more-about-site {
+  margin-left: 27px;
 }
 
-.wrapper__image {
-    position: relative;
-    left: 40px;
-    bottom: 20px;
+.more-about-site__arrow {
+  margin-right: 5px;
+}
+
+.landing__image {
+  position: relative;
+  left: 40px;
+  bottom: 20px;
 }
