--- a/client/src/pages/Layouts/MainLayout/MainLayout.css
+++ b/client/src/pages/Layouts/MainLayout/MainLayout.css
@@ -1,8 +1,13 @@
-.container {
+.container_main {
+    display: flex;
+    flex-direction: column;
     position: relative;
+    align-items: center;
+    justify-content: center;
+    height: calc(100% - (82.8px + 15px));
 }
 
-.container__zigzag {
+.container_main__zigzag {
     position: absolute;
     bottom: 0;
     left: 0;
