Quiz page, user's answers validation, added

--- a/client/src/CustomButton/CustomButton.css
+++ b/client/src/CustomButton/CustomButton.css
@@ -1,10 +1,14 @@
 .button {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   font-family: "Poppins", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 13.9337px;
+  line-height: 21px;
   transition-duration: 0.5s;
   text-align: center;
+  user-select: none;
 }
 
 .button_color_red {
@@ -13,8 +17,19 @@
   color: #ffffff;
 }
 
+.button_color_gray {
+  padding: 10px 15px;
+  font-weight: 500;
+  background: #D1D1D1;
+  color:#333333;
+}
+
 .button_red-with-shadows {
   box-shadow: 0px 10.4502px 23.2228px -6.96683px #fbe18f;
+}
+
+.button_gray-with-shadows {
+  box-shadow: 0px 5.80569px 23.2228px -6.96683px #D1D1D1;
 }
 
 .button_color_white {
