--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,7 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 
-html, body, #root {
-    height: 100%;
-    overflow: scroll;
+/* html,
+body,
+#root {
+  height: 100%;
+} */
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  display: table;
+}
+
+#root {
+  width: 100%;
+  display: table-cell;
 }
