--- a/client/src/pages/Layouts/AuthorizationLayout/AuthorizationLayout.css
+++ b/client/src/pages/Layouts/AuthorizationLayout/AuthorizationLayout.css
@@ -1,8 +1,8 @@
 .authorization {
     display: flex;
     flex-direction: row;
-    height: calc(100% + 50px);
-    overflow: scroll;
+    height: 100%;
+    overflow-y: scroll;
     /* padding-bottom: 50px; */
 }
 
