--- a/client/src/TopicsModal/TopicBadge/TopicBadge.css
+++ b/client/src/TopicsModal/TopicBadge/TopicBadge.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  user-select: none;
 }
 
 .topic-badge__input {
@@ -18,12 +19,12 @@
   font-size: 15px;
   line-height: 15px;
   padding: 6px 8px;
-  user-select: none;
 }
 
 .topic-badge__input:checked ~ .topic-badge__title {
   background: #A8171A;
   padding: 6px 5px;
+  color: white;
 }
 
 .topic-badge__unselect-wrapper {
