--- a/client/src/pages/Layouts/AuthorizationLayout/AuthorizationLayout.css
+++ b/client/src/pages/Layouts/AuthorizationLayout/AuthorizationLayout.css
@@ -1,7 +1,9 @@
 .authorization {
+    position: absolute;
     display: flex;
     flex-direction: row;
     height: 100%;
+    width: 100%;
     overflow-y: scroll;
     /* padding-bottom: 50px; */
 }
