--- a/client/src/pages/Layouts/MainLayout/MainLayout.css
+++ b/client/src/pages/Layouts/MainLayout/MainLayout.css
@@ -1,11 +1,13 @@
 .container_main {
+  position: absolute;
   display: flex;
+  width: 100%;
+  height: 100%;
+  padding-top: calc(33px + 46px + 15px);
   flex-direction: column;
-  position: relative;
   align-items: center;
   justify-content: center;
-  height: calc(100% - (82.8px + 15px));
-  /* overflow-y: scroll; */
+  /* height: calc(100% - 94px); */
 }
 
 .container_main__zigzag {
